[gd_scene load_steps=28 format=4 uid="uid://bcjkwv3qrlhit"]

[ext_resource type="Texture2D" uid="uid://c44mmabw1tlmy" path="res://Old_Textures/MErged.png" id="1_2dmtt"]
[ext_resource type="Script" path="res://node_2d.gd" id="1_eapci"]
[ext_resource type="Texture2D" uid="uid://usaswe3drlu1" path="res://Tiles.png" id="2_3pn20"]
[ext_resource type="Texture2D" uid="uid://ba1rwdfrdu8a3" path="res://Old_Textures/30x26 hex.png" id="2_x2cx1"]
[ext_resource type="Texture2D" uid="uid://cmr3tf7y7g7cj" path="res://core swirl.png" id="3_7f3d4"]
[ext_resource type="Texture2D" uid="uid://cmqnt0fnw2wpf" path="res://Idicator tiles.png" id="4_p3bwd"]
[ext_resource type="Script" path="res://hazards.gd" id="5_k80nj"]
[ext_resource type="PackedScene" uid="uid://cdbv2sa5w7pcl" path="res://snek.tscn" id="6_72hf2"]
[ext_resource type="Script" path="res://snek.gd" id="7_wei56"]
[ext_resource type="Script" path="res://core_integrety.gd" id="9_2vwqf"]
[ext_resource type="AudioStream" uid="uid://d2o38fw22cs35" path="res://Sound_Effects/glass-breaking-sound-effect-240679.mp3" id="10_b26rw"]
[ext_resource type="Script" path="res://core_sounds.gd" id="11_7b4uj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qw361"]
texture = ExtResource("2_3pn20")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(31, 26)
0:0/0 = 0
0:1/0 = 0
1:0/0 = 0
1:2/0 = 0
1:1/0 = 0
0:2/0 = 0
0:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_75g6k"]
texture = ExtResource("2_x2cx1")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(30, 26)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rlpus"]
resource_name = "Atlas0"
texture = ExtResource("1_2dmtt")
texture_region_size = Vector2i(30, 26)
0:0/0 = 0
0:1/0 = 0
1:0/0 = 0
1:1/0 = 0
2:0/0 = 0
2:1/0 = 0
2:2/0 = 0
2:3/0 = 0
3:0/0 = 0
3:1/0 = 0
3:2/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_602vm"]
tile_shape = 3
tile_layout = 3
tile_offset_axis = 1
tile_size = Vector2i(32, 26)
sources/9 = SubResource("TileSetAtlasSource_rlpus")
sources/100 = SubResource("TileSetAtlasSource_75g6k")
sources/0 = SubResource("TileSetAtlasSource_qw361")
tile_proxies/coords_level = [[0, Vector2i(0, 0)], [2, Vector2i(0, 0)], [0, Vector2i(0, 1)], [2, Vector2i(0, 1)], [0, Vector2i(1, 0)], [2, Vector2i(1, 0)], [0, Vector2i(1, 1)], [2, Vector2i(1, 1)], [1, Vector2i(0, 0)], [2, Vector2i(2, 0)], [1, Vector2i(0, 1)], [2, Vector2i(2, 1)], [1, Vector2i(0, 2)], [2, Vector2i(2, 2)], [1, Vector2i(0, 3)], [2, Vector2i(2, 3)], [1, Vector2i(1, 0)], [2, Vector2i(3, 0)], [1, Vector2i(1, 1)], [2, Vector2i(3, 1)], [1, Vector2i(1, 2)], [2, Vector2i(3, 2)], [1, Vector2i(1, 3)], [2, Vector2i(3, 3)]]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y6mqx"]
texture = ExtResource("4_p3bwd")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(30, 26)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0

[sub_resource type="TileSet" id="TileSet_fp35v"]
tile_shape = 3
tile_layout = 3
tile_offset_axis = 1
tile_size = Vector2i(32, 26)
sources/0 = SubResource("TileSetAtlasSource_y6mqx")

[sub_resource type="AtlasTexture" id="AtlasTexture_nm4p5"]
atlas = ExtResource("3_7f3d4")
region = Rect2(0, 0, 11, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvwl4"]
atlas = ExtResource("3_7f3d4")
region = Rect2(0, 13, 11, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvr05"]
atlas = ExtResource("3_7f3d4")
region = Rect2(0, 26, 11, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jagr"]
atlas = ExtResource("3_7f3d4")
region = Rect2(0, 39, 11, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3362"]
atlas = ExtResource("3_7f3d4")
region = Rect2(0, 52, 11, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynk2i"]
atlas = ExtResource("3_7f3d4")
region = Rect2(0, 65, 11, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejrfn"]
atlas = ExtResource("3_7f3d4")
region = Rect2(0, 78, 11, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibudu"]
atlas = ExtResource("3_7f3d4")
region = Rect2(0, 91, 11, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_khai2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nm4p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvwl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvr05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jagr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3362")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynk2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejrfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibudu")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="Map" type="Node2D"]
texture_filter = 1
scale = Vector2(2, 2)
script = ExtResource("1_eapci")
metadata/coordinate_position = Vector2(0, 0)

[node name="Terrain" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAHAAMAAAAAAAAAAAAIAAMAAAABAAEAAAAHAAIAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAABAAAAAAAGAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAEAAAAAAAEAAAAIAAIAAAABAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAABAAEAAAAJAAQAAAABAAEAAAAIAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAFAAMAAAABAAEAAAAFAAIAAAABAAAAAAAFAAQAAAABAAEAAAAGAAYAAAAAAAEAAAAKAAQAAAAAAAEAAAAIAAQAAAAAAAAAAAAIAAYAAAAAAAAAAAAJAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAUAAAAAAAAAAAALAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAANAAUAAAAAAAAAAAANAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAALAAQAAAAAAAAAAAAMAAMAAAAAAAAAAAANAAIAAAABAAEAAAANAAMAAAAAAAAAAAAMAAIAAAABAAAAAAAMAAEAAAAAAAAAAAANAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAEAAAABAAEAAAALAAEAAAABAAAAAAALAAAAAAAAAAAAAAAKAAEAAAABAAEAAAAKAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAALAAMAAAAAAAAAAAALAAIAAAABAAAAAAAJAAEAAAABAAEAAAAIAAEAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAAAAAABAAEAAAAFAAAAAAAAAAIAAAAEAAEAAAAAAAAAAAAFAAEAAAABAAEAAAAEAAAAAAAAAAAAAAADAAAAAAAAAAAAAAACAAEAAAABAAEAAAADAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAADAAIAAAAAAAAAAAACAAIAAAABAAEAAAABAAIAAAAAAAAAAAABAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAEAAAAAAAAAAAABAAAAAAABAAAAAAACAAAAAAABAAAAAAAAAAAAAAABAAAAAAABAAMAAAAAAAAAAAAAAAMAAAAAAAAAAAACAAMAAAAAAAAAAAABAAQAAAABAAAAAAACAAQAAAABAAEAAAADAAMAAAABAAEAAAAEAAQAAAABAAAAAAAEAAMAAAAAAAAAAAAEAAUAAAABAAEAAAADAAUAAAABAAAAAAACAAUAAAABAAAAAAABAAUAAAAAAAAAAAADAAQAAAABAAEAAAAEAAYAAAAAAAIAAAAFAAUAAAAAAAAAAAACAAYAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAYAAAAAAAAAAAAOAAEAAAABAAEAAAAOAAIAAAABAAAAAAAPAAIAAAABAAAAAAAPAAMAAAABAAAAAAAQAAIAAAABAAAAAAAQAAMAAAABAAAAAAAQAAQAAAABAAAAAAAPAAUAAAABAAAAAAAOAAYAAAABAAAAAAAMAAcAAAABAAAAAAALAAgAAAABAAAAAAAKAAgAAAABAAAAAAAJAAgAAAABAAAAAAAIAAgAAAAAAAEAAAAIAAcAAAABAAAAAAANAAYAAAABAAEAAAALAAYAAAABAAEAAAAKAAcAAAABAAEAAAALAAcAAAABAAEAAAAJAAcAAAABAAAAAAAJAAYAAAABAAEAAAAOAAQAAAABAAEAAAAOAAUAAAABAAEAAAAPAAQAAAABAAEAAAAOAAMAAAABAAEAAAANAAcAAAAAAAAAAAAIAAkAAAAAAAAAAAAJAAkAAAAAAAAAAAAKAAkAAAAAAAAAAAALAAkAAAAAAAAAAAAMAAkAAAABAAAAAAAMAAgAAAAAAAAAAAANAAgAAAAAAAAAAAAOAAcAAAAAAAAAAAAPAAYAAAAAAAAAAAAQAAUAAAAAAAAAAAARAAQAAAAAAAAAAAARAAMAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAABAAEAAAD+/wEAAAABAAEAAAD+/wAAAAAAAAAAAAD/////AAABAAAAAAAAAP//AAABAAEAAAABAP//AAABAAAAAAABAP7/AAABAAEAAAAAAP7/AAABAAEAAAD///7/AAABAAAAAAD+////AAABAAEAAAD9/wAAAAABAAEAAAD8/wEAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAABAAEAAAD+/wIAAAABAAAAAAD//wIAAAABAAEAAAD8/wIAAAAAAAAAAAD8/wAAAAABAAEAAAD9////AAAAAAAAAAD+//7/AAABAAEAAAAAAP3/AAABAAEAAAABAP3/AAABAAAAAAACAP3/AAABAAEAAAD///3/AAABAAAAAAACAP7/AAABAAEAAAADAP//AAAAAAAAAAADAP7/AAABAAEAAAADAP3/AAABAAEAAAADAPz/AAABAAEAAAAEAP3/AAABAAEAAAAEAPz/AAABAAEAAAAEAP//AAAAAAAAAAAEAP7/AAABAAEAAAAFAP7/AAABAAAAAAAFAP3/AAABAAAAAAAFAPz/AAABAAAAAAAFAPv/AAAAAAAAAAAEAPv/AAABAAEAAAADAPv/AAABAAEAAAACAPz/AAABAAEAAAABAPz/AAABAAEAAAAAAPz/AAABAAEAAAD///z/AAABAAAAAAD+//3/AAABAAEAAAD9//7/AAAAAAAAAAD8////AAABAAEAAAD7/wEAAAABAAAAAAD7/wIAAAABAAEAAAD+/wMAAAABAAEAAAD9/wMAAAABAAEAAAD8/wMAAAAAAAAAAAD7/wMAAAAAAAAAAAD6/wMAAAABAAEAAAD5/wMAAAABAAEAAAD5/wIAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wAAAAAAAAAAAAD7////AAAAAAAAAAD7//7/AAAAAAAAAAD8//7/AAABAAEAAAD5/wEAAAAAAAAAAAD6/wIAAAABAAEAAAD9//3/AAAAAAAAAAD+//z/AAABAAAAAAAAAPv/AAABAAAAAAABAPr/AAABAAAAAAACAPr/AAABAAEAAAACAPv/AAABAAAAAAABAPv/AAABAAEAAAADAPr/AAABAAEAAAAEAPn/AAABAAAAAAAFAPn/AAABAAAAAAAGAPn/AAAAAAAAAAAGAPr/AAABAAAAAAAHAPr/AAABAAAAAAAGAPv/AAAAAAEAAAAGAPz/AAABAAAAAAAGAP3/AAAAAAAAAAAFAPr/AAABAAAAAAAGAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAHAP3/AAAAAAAAAAAIAPz/AAABAAEAAAAHAPz/AAAAAAAAAAAIAPv/AAABAAEAAAAHAPv/AAABAAAAAAAHAP7/AAABAAEAAAD9/wQAAAAAAAAAAAD8/wQAAAAAAAAAAAD//wMAAAAAAAAAAAD7/wQAAAABAAEAAAD6/wUAAAABAAAAAAD5/wUAAAABAAEAAAD4/wUAAAABAAEAAAD4/wQAAAABAAEAAAD3/wQAAAABAAEAAAD4/wMAAAAAAAAAAAD3/wMAAAAAAAAAAAD4/wIAAAAAAAAAAAD3/wIAAAABAAEAAAD6/wQAAAABAAEAAAD5/wQAAAABAAEAAAD5/wAAAAAAAAAAAAD5////AAAAAAAAAAD4/wAAAAAAAAAAAAD6////AAAAAAAAAAD4/wEAAAAAAAAAAAD8//3/AAABAAEAAAD9//z/AAAAAAAAAAD+//v/AAAAAAAAAAD///v/AAAAAAAAAAAAAPr/AAAAAAEAAAACAPn/AAABAAAAAAADAPn/AAABAAAAAAAHAPn/AAAAAAAAAAAJAPz/AAAAAAAAAAAIAP3/AAABAAEAAAAJAP3/AAAAAAAAAAAIAP7/AAAAAAAAAAAHAP//AAAAAAAAAAAGAP//AAABAAEAAAAIAPn/AAABAAAAAAAIAPr/AAAAAAAAAAAJAPr/AAAAAAAAAAAJAPv/AAAAAAAAAAAEAPr/AAABAAEAAAACAP//AAAAAAAAAAAQAAEAAAAAAAAAAAAPAAEAAAAAAAAAAAD//wQAAAABAAAAAAD+/wQAAAAAAAAAAAD8/wUAAAAAAAAAAAD9/wUAAAAAAAAAAAD7/wUAAAABAAEAAAD5/wYAAAABAAAAAAD6/wYAAAAAAAAAAAD4/wYAAAAAAAAAAAD3/wYAAAABAAAAAAD3/wUAAAABAAAAAAD2/wQAAAABAAAAAAD2/wMAAAABAAAAAAD3/wEAAAAAAAIAAAD2/wIAAAABAAAAAAD4////AAAAAAAAAAD3/wAAAAABAAAAAAD5//7/AAABAAAAAAD6//7/AAAAAAAAAAD7//3/AAAAAAAAAAD8//z/AAAAAAAAAAD2/wUAAAABAAAAAAD7//r/AAAAAAAAAAD8//n/AAABAAAAAAD7//n/AAABAAAAAAD6//n/AAABAAAAAAD5//n/AAABAAAAAAD4//n/AAABAAAAAAD3//n/AAABAAAAAAD2//n/AAABAAAAAAD2//r/AAABAAAAAAD2//v/AAABAAAAAAD3//r/AAABAAAAAAD3//v/AAABAAAAAAD4//r/AAABAAEAAAD4//v/AAAAAAAAAAD5//r/AAABAAEAAAD5//v/AAAAAAEAAAD6//r/AAABAAEAAAD6//v/AAABAAAAAAD5//z/AAABAAAAAAD4//z/AAAAAAAAAAD3//z/AAABAAAAAAD2//z/AAABAAAAAAD2//3/AAABAAAAAAD2//7/AAABAAAAAAD3//3/AAABAAAAAAD3//7/AAAAAAAAAAD4//3/AAAAAAAAAAD4//7/AAABAAAAAAD5//3/AAAAAAAAAAD6//z/AAABAAEAAAD7//v/AAABAAEAAAD8//r/AAABAAEAAAD9//n/AAABAAAAAAD9//r/AAABAAEAAAD+//n/AAABAAAAAAD+//r/AAABAAAAAAD///n/AAABAAAAAAD///r/AAABAAAAAAAAAPn/AAABAAAAAAABAPn/AAABAAAAAAD9//v/AAAAAAAAAAD8//v/AAABAAAAAAD7//z/AAABAAAAAAD6//3/AAABAAAAAAD3////AAAAAAAAAAD2////AAABAAAAAAD2/wAAAAABAAAAAAD2/wEAAAABAAAAAAAOAP3/AAAAAAAAAAAPAPz/AAAAAAEAAAAQAPv/AAABAAAAAAARAPr/AAABAAAAAAARAPn/AAABAAAAAAAQAPn/AAABAAAAAAAPAPn/AAABAAAAAAAOAPn/AAABAAAAAAANAPn/AAABAAAAAAAMAPn/AAABAAAAAAALAPn/AAABAAAAAAAKAPn/AAABAAAAAAAJAPn/AAABAAAAAAAKAPr/AAABAAAAAAAKAPv/AAAAAAAAAAALAPr/AAABAAAAAAALAPv/AAAAAAAAAAAMAPr/AAABAAAAAAAMAPv/AAAAAAAAAAANAPr/AAABAAAAAAANAPv/AAAAAAAAAAAOAPr/AAABAAAAAAAOAPv/AAAAAAAAAAAPAPr/AAABAAAAAAAPAPv/AAABAAAAAAAQAPr/AAABAAAAAAAOAPz/AAAAAAAAAAANAPz/AAABAAAAAAAMAPz/AAABAAAAAAALAPz/AAABAAAAAAAKAPz/AAABAAAAAAAKAP3/AAABAAAAAAAJAP7/AAABAAAAAAAIAP//AAABAAAAAAAJAP//AAABAAAAAAAKAP7/AAAAAAAAAAALAP3/AAAAAAEAAAALAP7/AAAAAAAAAAAMAP3/AAAAAAAAAAAMAP7/AAABAAEAAAANAP3/AAABAAAAAAANAP7/AAABAAEAAAAMAP//AAABAAAAAAALAP//AAABAAAAAAAKAP//AAABAAAAAAANAP//AAABAAAAAAAOAP7/AAAAAAAAAAAPAP3/AAAAAAAAAAAQAPz/AAABAAAAAAARAPv/AAABAAAAAAARAPz/AAABAAAAAAAQAP3/AAABAAAAAAAPAP7/AAAAAAAAAAAOAP//AAABAAAAAAAOAAAAAAAAAAAAAAAPAP//AAAAAAAAAAAQAP7/AAABAAAAAAARAP3/AAABAAAAAAARAP7/AAABAAAAAAAQAP//AAABAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAABAAAAAAARAP//AAABAAAAAAARAAAAAAABAAAAAAD9/wcAAAAAAAAAAAD+/wYAAAABAAEAAAD//wUAAAABAAAAAAD+/wUAAAABAAEAAAD9/wYAAAABAAAAAAD8/wYAAAABAAAAAAD7/wYAAAABAAEAAAD6/wcAAAABAAAAAAD5/wcAAAAAAAAAAAD4/wcAAAAAAAEAAAD3/wcAAAAAAAAAAAD2/wcAAAABAAAAAAD2/wYAAAABAAAAAAD2/wgAAAABAAAAAAD2/wkAAAABAAAAAAD3/wgAAAAAAAAAAAD3/wkAAAABAAAAAAD4/wgAAAAAAAAAAAD4/wkAAAABAAAAAAD5/wgAAAAAAAAAAAD5/wkAAAABAAAAAAD6/wgAAAAAAAAAAAD7/wcAAAAAAAAAAAD7/wgAAAABAAEAAAD8/wcAAAAAAAAAAAD8/wgAAAABAAEAAAD7/wkAAAABAAAAAAD6/wkAAAABAAAAAAD8/wkAAAABAAAAAAD9/wgAAAAAAAAAAAD+/wcAAAABAAEAAAD//wYAAAABAAAAAAD//wcAAAABAAAAAAD+/wgAAAAAAAAAAAD9/wkAAAABAAAAAAD+/wkAAAABAAAAAAD//wgAAAABAAEAAAAAAAcAAAABAAEAAAABAAYAAAABAAAAAAABAAcAAAABAAAAAAAAAAgAAAABAAEAAAD//wkAAAABAAAAAAAAAAkAAAABAAAAAAABAAgAAAABAAEAAAACAAcAAAAAAAAAAAADAAYAAAABAAEAAAADAAcAAAABAAAAAAACAAgAAAAAAAAAAAABAAkAAAABAAAAAAACAAkAAAABAAAAAAADAAgAAAAAAAIAAAAEAAcAAAABAAAAAAAFAAYAAAABAAEAAAAFAAcAAAABAAEAAAAEAAgAAAABAAAAAAADAAkAAAABAAAAAAAEAAkAAAABAAAAAAAFAAgAAAABAAEAAAAGAAcAAAABAAAAAAAHAAYAAAABAAAAAAAHAAcAAAABAAEAAAAGAAgAAAABAAEAAAAFAAkAAAAAAAAAAAAGAAkAAAABAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAD7/wAAAAABAAAAAAASAAAAAAABAAAAAAASAAEAAAABAAAAAAASAAIAAAABAAAAAAASAAMAAAABAAAAAAASAAQAAAABAAAAAAASAAUAAAABAAAAAAARAAUAAAABAAAAAAAQAAYAAAABAAAAAAAPAAcAAAABAAAAAAAOAAgAAAABAAAAAAANAAkAAAABAAAAAAALAAoAAAABAAAAAAAKAAoAAAABAAAAAAAJAAoAAAABAAAAAAAIAAoAAAABAAAAAAAHAAoAAAABAAAAAAAGAAoAAAABAAAAAAAFAAoAAAABAAAAAAAEAAoAAAABAAAAAAA=")
tile_set = SubResource("TileSet_602vm")
collision_enabled = false

[node name="Hazards" type="TileMapLayer" parent="."]
self_modulate = Color(1, 1, 1, 0)
tile_map_data = PackedByteArray("AAAGAP3/AAAAAAEAAAD9////AAAAAAEAAAAEAAAAAAAAAAEAAAD5/wIAAAAAAAEAAAAFAPv/AAAAAAEAAAAAAAIAAAAAAAEAAAD8/wIAAAAAAAEAAAD8/wUAAAAAAAEAAAAMAAQAAAAAAAEAAAANAAcAAAAAAAEAAAAGAAEAAAAAAAEAAAAHAAQAAAAAAAEAAAACAAYAAAAAAAEAAAD6//7/AAAAAAEAAAD4//v/AAAAAAEAAAAOAP3/AAAAAAEAAAA=")
tile_set = SubResource("TileSet_fp35v")
navigation_enabled = false
script = ExtResource("5_k80nj")

[node name="Snek_manager" type="Node2D" parent="Hazards"]
auto_translate_mode = 2
self_modulate = Color(1, 1, 1, 0)
script = ExtResource("7_wei56")

[node name="Snek" parent="Hazards/Snek_manager" instance=ExtResource("6_72hf2")]
visible = false
show_behind_parent = true
texture_filter = 1
texture_repeat = 1
position = Vector2(-16, 54)
frame_progress = 0.0

[node name="Timer" type="Timer" parent="Hazards/Snek_manager"]
process_mode = 3
one_shot = true

[node name="Player_Core" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_khai2")
autoplay = "default"
frame_progress = 0.21019

[node name="Camera2D" type="Camera2D" parent="Player_Core"]
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true

[node name="Core_Integrety" type="ProgressBar" parent="Player_Core/Camera2D"]
auto_translate_mode = 1
self_modulate = Color(0.509804, 0, 0.156863, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 67.5
offset_top = -71.0
offset_right = 114.5
offset_bottom = -60.0
max_value = 3.0
value = 3.0
allow_greater = true
fill_mode = 1
show_percentage = false
script = ExtResource("9_2vwqf")
metadata/max_health = 0

[node name="Core_sounds" type="AudioStreamPlayer" parent="Player_Core"]
stream = ExtResource("10_b26rw")
pitch_scale = 1.03
script = ExtResource("11_7b4uj")

[node name="movement_timer" type="Timer" parent="."]
wait_time = 0.299
one_shot = true

[node name="Hazzards" type="Node2D" parent="."]
position = Vector2(-189, -190)
scale = Vector2(2, 2)

[connection signal="damage_taken" from="." to="Player_Core/Camera2D/Core_Integrety" method="_on_deal_damage"]
[connection signal="process_hazzards" from="." to="Hazards" method="_process_hazzards"]
[connection signal="reactivate_movement" from="Hazards" to="." method="_on_hazards_reactivate_movement"]
[connection signal="deal_damage" from="Hazards/Snek_manager" to="Player_Core/Camera2D/Core_Integrety" method="_on_deal_damage"]
[connection signal="finished_turns" from="Hazards/Snek_manager" to="Hazards" method="_on_finished_turns"]
[connection signal="core_damaged_s" from="Player_Core/Camera2D/Core_Integrety" to="Player_Core/Core_sounds" method="_core_damage_sound"]
[connection signal="core_destroyed_s" from="Player_Core/Camera2D/Core_Integrety" to="Player_Core/Core_sounds" method="_core_destroyed_sound"]
[connection signal="timeout" from="movement_timer" to="." method="_on_movement_timer_timeout"]
